syntax = "proto3";
import "google/protobuf/empty.proto";

package ecommerce;

service PurchaseService {
  rpc CreatePurchase(CreatePurchaseRequest) returns (Purchase);
}

service NotificationService {
    rpc CreateNotification(CreateNotificationRequest) returns (google.protobuf.Empty);
  }

  service ShoppingCartService {
    rpc GetShoppingCartsByUser(GetShoppingCartsRequest) returns (GetShoppingCartsResponse);
    rpc CreateShoppingCart(CreateShoppingCartRequest) returns (ShoppingCart);
    rpc DeleteShoppingCart(DeleteShoppingCartRequest) returns (google.protobuf.Empty);
    rpc UpdateShoppingCart(UpdateShoppingCartRequest) returns (google.protobuf.Empty);
    rpc Checkout(CheckoutRequest) returns (google.protobuf.Empty);
  }

  service CatalogService {
    rpc SearchCatalog(SearchCatalogRequest) returns (SearchCatalogResponse);
  }


  service WishlistService {
    rpc GetWishlistItemsByUser (GetWishlistItemsRequest) returns (GetWishlistItemsResponse);
    rpc CreateWishlistItem (CreateWishlistItemRequest) returns (WishlistItem);
    rpc DeleteWishlistItem (DeleteWishlistItemRequest) returns (google.protobuf.Empty);
  }

message CheckoutRequest {
  string userId = 1;
}
  
  message GetWishlistItemsRequest {
    string userId = 1;
  }
  
  message GetWishlistItemsResponse {
    repeated WishlistItem wishlistItems = 1;
  }
  
  message CreateWishlistItemRequest {
    string userId = 1;
    string itemId = 2;
  }
  
  message DeleteWishlistItemRequest {
    string id = 1;
  }
  message WishlistItem {
    string id = 1;
    string userId = 2;
    string itemId = 3;
    string createdAt = 5;
    string updatedAt = 6;
  }  
  

message CreatePurchaseRequest {
  string userId = 1;
  float price = 2;
}

message Purchase {
  string id = 1;
  string userId = 2;
  float price = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string status = 7;
}

message CreateNotificationRequest {
    string userId = 1;
    string purchaseId = 2;
    string status = 3;
  }
  
  message Notification {
    string id = 1;
    string userId = 2;
    string status = 3;
  }

  
  message GetShoppingCartsRequest {
    string userId = 1;
  }
  
  message GetShoppingCartsResponse {
    repeated ShoppingCart shoppingCarts = 1;
  }
  
  message CreateShoppingCartRequest {
    string userId = 1;
    string itemId = 2;
    int32 amount = 3;
    float price = 4;
  }
  
  message DeleteShoppingCartRequest {
    string id = 1;
  }
  
  message UpdateShoppingCartRequest {
    string id = 1;
    int32 amount = 2;
  }
  
  message ShoppingCart {
    string id = 1;
    string userId = 2;
    string itemId = 3;
    int32 amount = 4;
    float price = 5;
    string createdAt = 6;
    string updatedAt = 7;
  }

  
  message SearchCatalogRequest {
    string queryString = 1;
  }
  
  message SearchCatalogResponse {
    repeated Catalog catalogItems = 1;
  }
  
  message Catalog {
    string id = 1;
    string name = 2;
    float price = 4;
    string createdAt = 5;
    string updatedAt = 6;
  }
  
  